--- a/configurations.properties
+++ b/configurations.properties
@@ -1,4 +1,4 @@
 browser=chrome
-projectUrl=https://the-internet.herokuapp.com/tables
+projectUrl=https://www.browserstack.com/users/sign_up
 username=kullaniciAdi
 password=password
